2004-12-31  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Last-minute cleanup for release 1.2.0:
	* include/compat: New directory.
	* include/compat/ina90.h: Moved from avr/ina90.h.
	* include/compat/twi.h: Moved from avr/twi.h.
	* include/avr/ina90.h: Removed from old location.
	* include/avr/twi.h: Ditto.
	* doc/avr-libc-reference.html: Remove obsolete file.
	* doc/examples/twitest/twitest.c: twi.h is in compat/ now.
	* doc/examples/twitest/twitest.dox: Ditto.

2004-12-30  Eric B. Weddington  <ericw@evcohs.com>

    Apply patch #2155:
    
    2004-04-07  Theodore A. Roth  <troth@openavr.org>
    [Contriubuted by Luca Matteini]

	* libc/stdlib/strtol.c: Make a couple of optimizations.
	* libc/stdlib/strtoul.c: Ditto.

2004-12-30  Eric B. Weddington  <ericw@evcohs.com>

    * include/avr/iom169.h: Add PRR register and bit definitions.
    [Fix for bug #11418]
    * NEWS: Update bugs fixed list.

2004-12-30  Eric B. Weddington  <ericw@evcohs.com>

    * include/avr/iom128.h: Add USART* signal names to match datasheet.
    [Fix for bug #11405]
    * NEWS: Update bugs fixed list.

2004-12-29  Eric B. Weddington  <ericw@evcohs.com>

    * include/avr/sleep.h: Fix bugs #6352, #10489, #11425.
    * NEWS: Update bugs fixed list.

2004-12-28  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdio/vfprintf.c: Fix zero-padding when precision
	is given (savannah bug #9345)

2004-12-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.in: Mark the branch as being pre-release.

2004-12-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdio/fdevopen.c: document the use of calloc()
	[fix for savannah bug #11275]

2004-12-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* NEWS: Update, merge all fixes from 1.0 branch.

2004-12-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/main_page.dox: Mention all newly supported devices.
	* doc/api/using-tools.dox: Mention all newly supported devices.

2004-12-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>